--- a/python-scripts/.env
+++ b/python-scripts/.env
@@ -1,4 +1,5 @@
-SMHI_API_URL="https://opendata-download-metobs.smhi.se/api/version/1.0"
+METOBS_URL="https://opendata-download-metobs.smhi.se/api/version/1.0"
 SMHI_PARAMETER=1
+SMHI_STATION_SET="all"
 SMHI_STATION=159880
-SMHI_PERIOD="corrected-archive"
+SMHI_PERIOD="latest-hour"
