--- a/python-scripts/Dockerfile
+++ b/python-scripts/Dockerfile
@@ -7,4 +7,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "get_data.py"] 
+# Fix line endings and set permissions
+RUN chmod +x run.sh && \
+    sed -i 's/\r$//' run.sh
+
+# Run the shell script instead of directly running Python
+CMD ["./run.sh"] 
