--- a/python-scripts/requirements.txt
+++ b/python-scripts/requirements.txt
@@ -1,3 +1,9 @@
 requests==2.31.0
 python-dotenv==1.0.0
-pymongo==4.6.1 
+pymongo==4.6.1
+pandas==2.2.0
+numpy==1.26.3
+matplotlib==3.8.2
+seaborn==0.13.2
+jupyter==1.0.0
+notebook==7.0.7 
